add field gen
