# internal/adapter/grpc/handler/portal/v1/banner_handler.go
@@ -102,3 +102,42 @@ func (h *BannerHandler) GetListBanner(ctx context.Context, req *portalv1.GetList
 		Limit:       pageData["limit"],
 	}, nil
 }
+
+func (h *BannerHandler) GetBanner(ctx context.Context, req *portalv1.GetBannerRequest) (*portalv1.GetBannerResponse, error) {
+	bannerRepo := h.adapter.BannerRepository()
+	banner, err := bannerRepo.TakeByConditions(ctx, condition.EQ("id", req.BannerId))
+	if err != nil {
+		return nil, h.errorResponder.Respond(err)
+	}
+
+	resourceRepo := h.adapter.ResourceRepository()
+	resource, err := resourceRepo.TakeByConditions(ctx, condition.EQ("id", banner.ResourceID))
+	if err != nil {
+		return nil, h.errorResponder.Respond(err)
+	}
+
+	return &portalv1.GetBannerResponse{
+		Banner: &portalv1.Banner{
+			Id:            banner.ID,
+			NameVi:        banner.NameVi,
+			NameEn:        banner.NameEn,
+			NameZh:        banner.NameZh,
+			DescriptionVi: banner.DescriptionVi.Ptr(),
+			DescriptionEn: banner.DescriptionEn.Ptr(),
+			DescriptionZh: banner.DescriptionZh.Ptr(),
+			Position:      banner.Position.Ptr(),
+			Status:        int32(banner.Status),
+			Resource: &portalv1.Resource{
+				Id:        resource.ID,
+				Type:      int32(resource.Type),
+				Url:       resource.Url,
+				YoutubeId: resource.YoutubeID.Ptr(),
+			},
+			Link:         banner.Link.Ptr(),
+			ButtonNameVi: banner.ButtonNameVi.Ptr(),
+			ButtonNameEn: banner.ButtonNameEn.Ptr(),
+			ButtonNameZh: banner.ButtonNameZh.Ptr(),
+			HasContent:   banner.HasContent,
+		},
+	}, nil
+}
